# firecrawl

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  README.md  SELF_HOST.md  docker-compose.yaml
.github/: CODEOWNERS
.github/archive/: js-sdk.yml  publish-rust-sdk.yml  python-sdk.yml  rust-sdk.yml
.github/k8s/: playwright.yml  server-nsh.yml  server.yml
.github/scripts/: check_version_has_incremented.py  resolve_api_image_version.py
.github/workflows/: deploy-go-service.yaml  deploy-image-staging.yml  deploy-image.yml  deploy-nuq-postgres.yml  deploy-playwright.yml  deploy-redis.yml  eval-prod.yml  ghcr-clean.yml  npm-audit-claude-remediation.yml  npm-audit.yml  publish-dotnet-sdk.yml  publish-elixir-sdk.yml  publish-go-sdk.yml  publish-js-sdk.yml  publish-php-sdk.yml  publish-python-sdk.yml  publish-ruby-sdk.yml  publish-rust-sdk.yml  scrape-evals.yml  test-dotnet-sdk.yml  test-go-html-to-md-service.yml  test-go-sdk.yml  test-java-sdk.yml  test-js-sdk.yml  test-php-sdk.yml  test-ruby-sdk.yml  test-rust-sdk.yml  test-server-self-host.yml  test-server.yml  validate-lockfiles.yml
apps/.net-sdk/: README.md
apps/api/: .dockerignore  .env.example  .env.local  .gitignore  .prettierrc  Dockerfile  audit-ci.jsonc  jest.config.ts  knip.config.ts  openapi.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  requests.http  requests.kulala.http  tsconfig.json  v1-openapi.json  vitest.config.ts
apps/api/native/: .gitattributes  .gitignore  Cargo.toml  package.json
apps/api/native/src/: crawler.rs  engpicker.rs  html.rs  lib.rs  logging.rs  pdf.rs  utils.rs
apps/api/native/src/document/: mod.rs
apps/api/native/src/document/model/: mod.rs
apps/api/native/src/document/providers/: doc.rs  docx.rs  factory.rs  mod.rs  odt.rs  rtf.rs  xlsx.rs
apps/api/native/src/document/renderers/: html.rs
apps/dot-net-sdk/: Firecrawl.sln  README.md
apps/rust-sdk/: CHANGELOG.md  Cargo.toml  README.md
apps/rust-sdk/examples/: example.rs  v2_example.rs
apps/rust-sdk/src/: agent.rs  batch_scrape.rs  client.rs  crawl.rs  document.rs  error.rs  lib.rs  map.rs  monitor.rs  parse.rs  research.rs  scrape.rs  search.rs  serde_helpers.rs  types.rs
apps/rust-sdk/src/v2/: agent.rs  batch_scrape.rs  client.rs  crawl.rs  map.rs  mod.rs  scrape.rs  search.rs  types.rs
apps/rust-sdk/tests/: e2e_with_auth.rs  v2_e2e.rs
examples/: attributes-extraction-js-sdk.js
firecrawl-cli/: README.md
firecrawl-cli-skills/: README.md
firecrawl-skills/: README.md
firecrawl-workflows/: README.md
(+1151 files in other folders)
