[package]
name = "firecrawl"
version = "2.0.0"
edition = "2021"
license = "MIT"
homepage = "https://www.firecrawl.dev/"
repository = "https://github.com/firecrawl/firecrawl"
description = "Official Rust SDK for Firecrawl API v2."
authors = ["Gergő Móricz <mogery@firecrawl.dev>", "sanix-darker <sanixdk@gmail.com>", "kkharji <kkharji@protonmail.com>"]
keywords = ["firecrawl", "web-scraping", "crawling", "api"]
categories = ["api-bindings", "web-programming"]

[lib]
path = "src/lib.rs"
name = "firecrawl"

[dependencies]
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_with = "3"
thiserror = "1"
tokio = { version = "1", features = ["time"] }

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
mockito = "1.7"
serde_json = "1"
