
[package]
authors = ["Firecrawl"]
edition = "2021"
name = "firecrawl_rs"
version = "0.1.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
kuchikiki = "0.8.2"
lol_html = "2.6.0"
lopdf = "0.38.0"
maud = "0.27.0"
napi = { version = "3.0.0", features = ["serde-json"] }
napi-derive = "3.0.0"
nodesig = { git = "https://github.com/firecrawl/nodesig" }
psl = "2.1.140"
regex = "1.11.2"
roxmltree = "0.20.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.143"
texting_robots = "0.2.2"
url = "2.5.7"
zip = "5.0.0"
calamine = "0.26"

[build-dependencies]
napi-build = "2"

[profile.release]
lto = true
strip = "symbols"
